# Kinetica

./: CMakeLists.txt  README.md
include/kinetica/: log.hpp  rendering.hpp  types.hpp  uuid.hpp  window.hpp
include/kinetica/ecs/: registry.hpp
include/kinetica/ecs/components/: material.hpp  mesh.hpp  transform.hpp
shader/: basic.frag  basic.vert
src/: main.cpp  rendering.cpp  uuid.cpp  window.cpp
src/ecs/: registry.cpp
src/ecs/components/: material.cpp  mesh.cpp  transform.cpp
